--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "pnpm build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://nipaaaa1.github.io/sunnyside-landing-page/",
   "dependencies": {
     "autoprefixer": "^10.4.17",
     "framer-motion": "^11.0.3",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
